Bug 1011574 - Throw the right exception when putImageData is passed an ImageData with a neutered buffer. r=bjacob